--- a/plugins/achievements/locales/locale_en.yml
+++ b/plugins/achievements/locales/locale_en.yml
@@ -8,6 +8,7 @@ en:
       achievement_removed: "Achievement removed!"
       doesnt_have_achievement: "%{name} doesn't have that achievement."
       achievements_title: "Achievements for %{name}"
-      achievement_noification_message: "New achievement: %{message}"
+      achievement_mail_subject: "Achievement Earned"
+      achievement_mail_message: "You have earned the achievement: %{message}"
       all_achievements_title: "All Achievements"
       
