Revert "Revert "Merge branch 'master' of https://github.com/Nhan-UTS/aresmush""
This reverts commit 5c2a9eee432de4bf61a126a5da77701feb0323e4.

--- a/plugins/describe/locales/locale_en.yml
+++ b/plugins/describe/locales/locale_en.yml
@@ -42,7 +42,7 @@ en:
        detail_title: "\"%{detail}\" on %{name}"
        foyer_room_locked: "%xrLocked%xn"
        foyer_room_occupied: "%xyOccupied%xn"
-       foyer_room_free: "%xgOpen%xn"
+       foyer_room_free: "%xh%xxEmpty%xn"
        foyer_room_status: "%xhFoyer Exits%xn"
        foyer_room_in_use: "%xy%xhIn Use%xn"
        
