--- a/plugins/scenes/locales/locale_en.yml
+++ b/plugins/scenes/locales/locale_en.yml
@@ -75,7 +75,7 @@ en:
         scene_not_shared: "That scene is not shared."
         no_scene_room: "That scene doesn't have a room to join.  That can happen if it's created from the web portal."
         log_list_short_footer: "Only the last few poses are shown.  For the entire log, use `scene/log`."
-        scene_active_footer: "Only active scenes are shown.  For completed scenes, use `scenes/all`."
+        scene_active_footer: "Scene views: scenes/open, scenes/all, scenes/unshared."
 
         log_shared: "The log has been shared, and will now appear on the web portal."
         log_unshared: "The log is no longer being shared on the web portal."
