Saving before upgrade.

--- a/plugins/utils/locales/locale_en.yml
+++ b/plugins/utils/locales/locale_en.yml
@@ -36,6 +36,7 @@ en:
         note_added: "Note added."
         note_deleted: "Note deleted."
         notes_admin_title: "Admin Notes for %{name}"
+        notes_story_title: "Story Notes for %{name}"
         notes_title: "Player Notes for %{name}"
         note_does_not_exist: "That note does not exist."
         note_added_by: "Added by %{name} on %{date}."
